--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amor de Pinguim</title>
+    <title>Preparada?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <a href="2.html">
+        <a href="treasure.html">
             <button class="romantic-button">CLIQUE AQUI!</button>
     </div>
 </body>
